--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>ایلخان چنج</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>صرافی ایلخان چنج</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 2rem;
+            text-align: center;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+        p {
+            color: #555;
+        }
+        .btn {
+            display: inline-block;
+            margin-top: 1rem;
+            padding: 0.75rem 1.5rem;
+            background-color: #27ae60;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .btn:hover {
+            background-color: #219150;
+        }
+    </style>
 </head>
 <body>
     <h1>به صرافی ایلخان چنج خوش آمدید</h1>
-    <p>ارائه خدمات خرید و فروش تتر، ترون و پرفکت‌مانی</p>
+    <p>خدمات خرید و فروش ارز دیجیتال | تتر، ترون، بیت‌کوین و ...</p>
+    <a class="btn" href="https://wa.me/989123456789" target="_blank">ارتباط در واتساپ</a>
 </body>
 </html>
