--- a/index.html
+++ b/index.html
@@ -1,41 +1,28 @@
 
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
+    <title>ایلهان اکسچنج</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صرافی ایلخان چنج</title>
     <style>
-        body {
-            font-family: sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 2rem;
-            text-align: center;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        p {
-            color: #555;
-        }
-        .btn {
-            display: inline-block;
-            margin-top: 1rem;
-            padding: 0.75rem 1.5rem;
-            background-color: #27ae60;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .btn:hover {
-            background-color: #219150;
-        }
+        body { font-family: sans-serif; background-color: #e8f5e9; color: #1b5e20; padding: 20px; }
+        .card { background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); max-width: 600px; margin: auto; }
+        h1 { text-align: center; color: #2e7d32; }
+        .contact { margin-top: 20px; font-size: 14px; }
+        .price { margin: 10px 0; }
     </style>
 </head>
 <body>
-    <h1>به صرافی ایلخان چنج خوش آمدید</h1>
-    <p>خدمات خرید و فروش ارز دیجیتال | تتر، ترون، بیت‌کوین و ...</p>
-    <a class="btn" href="https://wa.me/989123456789" target="_blank">ارتباط در واتساپ</a>
+    <div class="card">
+        <h1>ایلهان اکسچنج</h1>
+        <div class="price">🔷 قیمت تتر: <strong>58,000 تومان</strong></div>
+        <div class="price">🔷 قیمت ترون: <strong>1,800 تومان</strong></div>
+        <div class="price">🔷 قیمت پرفکت‌مانی: <strong>59,500 تومان</strong></div>
+        <div class="contact">
+            <p>واتساپ: 09393351869</p>
+            <p>تلگرام: @ElhanExchange</p>
+        </div>
+    </div>
 </body>
 </html>
